<resources>
    <string name="app_name">ICDesignCourse</string>
    <string name="mulailah">Mulailah Perjalanan Kamu bersama IC Design Course</string>
    <string name="text_belajar_desain">Belajar Desain dengan Lebih Mudah dan Menyenangkan bersama KIW Design</string>
    <string name="belajar_design_desctiption">belajar design desctiption</string>
    <string name="judul_ic_design">Judul Ic Design</string>
    <string name="icdesign">Icdesign</string>
    <string name="daftar">Daftar</string>
    <string name="masuk1">Masuk !</string>
    <string name="logo_ic_design">logo_ic_design</string>
    <string name="icdesign_gmail_com">icdesign@gmail.com</string>
    <string name="e_mail">E-Mail</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ilustrasi">Ilustrasi</string>
    <string name="atau">Atau</string>
    <string name="akun_google">Akun Google</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="ombaktop">ombakTop</string>
    <string name="ombakbottom">ombakBottom</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_sekarang">Daftar Sekarang !</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="lanjut">Lanjut</string>
    <string name="dsn_ui_ux">Desain UI/UX</string>
    <string name="desain_grafis">Desain Grafis</string>
    <string name="nanya_kelas">Mau belajar di kelas apa ?</string>
    <string name="student">Student</string>
    <string name="mentor">Mentor</string>
    <string name="role_mu">Role mu sebagai apa ?</string>
    <string name="lengkapi_profil">Lengkapi Profilmu Dulu Yuk !</string>
    <string name="nologin">noLogin</string>
</resources>